--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         body {
             margin: 0; /* 去掉默认边距 */
             display: flex; /* 使用弹性布局 */
-            justify-content: center; /* 水平居中 */
-            align-items: stretch; /* 垂直拉伸以匹配容器高度 */
-            transition: opacity 0.5s ease; /* 添加淡出效果 */
-            opacity: 1; /* 初始不透明度 */
-            position: relative; /* 设为相对定位以便后续定位使用 */
+            flex-direction: column; /* 垂直排列 */
+            justify-content: flex-start; /* 内容顶对齐 */
+            height: 100vh; /* 确保 html 和 body 占满整个窗口高度 */
         }
         #bg-container {
             position: fixed; /* 使背景视频固定 */
@@ -36,8 +34,10 @@
             display: flex; /* 使用 Flexbox 布局 */
             flex-grow: 1; /* 让内容区域占据剩余空间 */
             width: 100%; /* 确保容器占满可用空间 */
+            margin-bottom: 40px; /* 为 footer 留出空间 */
         }
         #info {
+            margin-left: 15%; /* 左侧距离为 200px */
             flex: 0 0 300px; /* 固定宽度为300px */
             display: flex; /* 使用 Flexbox 显示内部元素 */
             flex-direction: column; /* 纵向布局 */
@@ -50,17 +50,18 @@
             display: flex; /* 使用 Flexbox 布局 */
             flex-direction: column; /* 纵向排列 */
             align-items: center; /* 内容居中对齐 */
+            margin-right: 300px; /* 试调出合适的数值 */
+            margin-bottom: 0; /* 或者 a smaller value, e.g., 10px */
         }
         .content-box {
             background-color: rgba(255, 255, 255, 0.9); /* 内容框体的背景色 */
             border-radius: 10px; /* 圆角 */
-            padding: 10px; /* 内间距 */
-            text-align: center; /* 文本居中对齐 */
+            padding: 20px; /* 内间距 */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 添加阴影效果 */
             margin: 20px; /* 增加上下间距 */
-            width: 100%; /* 设置内容框宽度为100% */
-            max-width: 800px; /* 设置内容框最大宽度 */
+            width: 700px; /* 设置内容框固定宽度为 800 像素 */
         }
+
         .info-box {
             background-color: rgba(255, 255, 255, 0.9); /* 个人信息框的背景色 */
             border-radius: 10px; /* 圆角 */
@@ -113,6 +114,19 @@
                 height: 100%;
             }
         }
+        .footer {
+            position: absolute; /* 使用绝对定位 */
+            bottom: 0; /* 距离底部 0 */
+            left: 0; /* 距离左侧 0 */
+            right: 0; /* 距离右侧 0 */
+            text-align: center;
+            padding: 3px; /* 内边距 */
+        }
+        .footer p {
+        margin: 5px 0; /* 段落上下间距 */
+        font-size: 12px; /* 设置文字大小为 14 像素 */
+        }
+
     </style>
     <script src="background.js"></script>
 </head>
@@ -210,14 +224,23 @@
                 </div>
             </div>
             
-            <div id="content"> <!-- 内容区域 -->
-                <a href="html/article/1.html"><div class="content-box"> <!-- 内容框 -->
+            <div id="content"> <!-- 内容区域 --><div class="content-box"> <!-- 内容框 -->
+                    <h1>2024/9/20 网站第二次测试</h1> <!-- 主要标题 -->
+                    <p>——修改了布局</p> <!-- 欢迎信息 -->
+                </div>
+                <div class="content-box"> <!-- 内容框 -->
                     <h1>2024/9/16 网站第一次测试</h1> <!-- 主要标题 -->
                     <p>欢迎来到拾玖的个人网站，这里将会分享一些个人的兴趣爱好，以及一些技术相关的文章。</p> <!-- 欢迎信息 -->
                     <p>网站测试期间，网站将会进行大量的改版，网站的功能将会逐渐增加，欢迎大家的反馈。</p> <!-- 测试信息 -->
-                </div></a>       
+                </div>
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+        <p>版权所有 &copy; 2024 <a href="https://space.bilibili.com/1222132945" target="_new">拾玖</a>
+        </br>禁止在未授权的情况下使用任何内容，包括但不限于修改源码、使用图片、视频等
+        <br>如需学习，可前往<a href="https://github.com/furry19sj/furry19sj.github.io" target="_new">GitHub</a>查看源代码。</p>
     </div>
 </body>
 </html>
