--- a/logs.html
+++ b/logs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" /> <!-- 禁用缓存 -->
     <meta http-equiv="pragma" content="no-cache" /> <!-- 兼容旧版缓存设置 -->
     <meta http-equiv="expires" content="0" /> <!-- 设置过期时间为0，立即过期 -->
-    <title>测试</title> <!-- 设置网页标题 -->
+    <title>更新日志</title> <!-- 设置网页标题 -->
     <link rel="icon" href="src/favicon.png" type="image/x-icon"> <!-- 设置网页图标 -->
     <script src="js/commonality.js"></script>
     <link rel="stylesheet" type="text/css" href="css/logs.css">
