--- a/p/p.html
+++ b/p/p.html
@@ -78,12 +78,12 @@
                     setInterval(updateSiteTimer, 1000);
                 </script>
             </div>
-        </div>
-        <div id="content"></div>
         <!-- 查看日志 -->
-        <div class="info-box"><a href="../logs.html">
+        <div class="info-box" style="padding-top:2px; padding-bottom:2px;"><a href="../logs.html">
             <p>点击查看网站更新日志</p>
         </a></div>
+        </div>
+        <div id="content"></div>
     </div>
 
     <div class="footer">
