--- a/w/tool/tool.html
+++ b/w/tool/tool.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>拾玖｜个人网站 工具箱</title>
-    <link rel="icon" href="../src/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../../src/favicon.png" type="image/x-icon">
     <script src="../../js/No-cell-phones.js"></script>
     <script src="../../js/commonality.js"></script>
     <link rel="stylesheet" type="text/css" href="../../css/commonality.css">
