--- a/w/tool/tool.html
+++ b/w/tool/tool.html
@@ -222,9 +222,9 @@
     </div>
     <div class="container">
         <h1>小游戏</h1>
-        <button onclick="window.location.href='Gluttonous-Snake/Gluttonous-Snake.html'">贪吃蛇</button>
-        <button onclick="window.location.href='http://webcs.xyz/'">反恐精英</button></br>
-        <button onclick="window.location.href='Minecraft/Minecraft-1.8.8.html'">我的世界</button>
+        <button onclick="window.open('Gluttonous-Snake/Gluttonous-Snake.html', '_blank')">贪吃蛇</button>
+        <button onclick="window.open('http://webcs.xyz/', '_blank')">反恐精英</button></br>
+        <button onclick="window.open('Minecraft/Minecraft-1.8.8.html', '_blank')">我的世界</button>
     </div>
     <div class="container">
         <h1>工具</h1>
